# botsmith

./: .gitignore  README.md  pyproject.toml  requirements.txt  run.py
.cache/41/: cache.db
agents/: __init__.py  registry.py
agents/specialized/: code_generator_agent.py  cost_estimator_agent.py  executor_agent.py  nlp_interpreter_agent.py  planner_agent.py  router_agent.py  security_agent.py  workflow_compiler_agent.py  workflow_executor.py  workflow_optimizer_agent.py
botsmith/: app.py  cli.py
botsmith-ui/: index.html  package-lock.json  package.json  tailwind.config.js
botsmith-ui/src/: App.jsx  WorkflowVisualizer.jsx  index.css
botsmith.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
botsmith/agents/: __init__.py  autogen_agent.py  base_agent.py  registry.py
botsmith/api/: deps.py  main.py  middleware.py  schemas.py
botsmith/config/: agent_configs.json  settings.py
botsmith/core/: plugin.py
botsmith/factory/: agent_factory.py
botsmith/llm/: __init__.py  gemini.py  groq.py  wrapper.py
core/base/: agent.py  (+1 more)
debug_bot_scaffold/: LICENSE  README.md  pyproject.toml  requirements.txt  run.py
debug_bot_scaffold/src/debug_bot_scaffold/: main.py
debug_bot_scaffold/tests/: test_basic.py
factory/: abstract_factory.py  agent_factory.py
nlp/: schemas.py  semantic_parser.py
persistence/: database.py  models.py  repository.py
scripts/: clean_bots.py
tests/: debug_coder_agent.py  test_e2e_flow.py  test_router_agent.py  test_stream.py  test_validator_agent.py
workflows/: base_workflow.py  bot_creation_workflow.py
(+85 files in other folders)
