[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "debug_bot_scaffold"
version = "0.1.0"
description = "A bot created with BotSmith - AI-Powered Bot Generator"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.28.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
debug_bot_scaffold = "debug_bot_scaffold.main:main"
